style(mon-pix): fix alignment in certif page

--- a/mon-pix/app/styles/globals/_layout.scss
+++ b/mon-pix/app/styles/globals/_layout.scss
@@ -1,4 +1,4 @@
 .page-container {
-  max-width: 1280px;
+  max-width: 1240px;
   margin: 0 auto;
 }
